<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000">

    <LinearLayout
        android:id="@+id/popup_area"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="18dp">

        <!-- title bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/popup_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/action_close"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="fitCenter"
                android:src="@drawable/action_close"
                tools:ignore="ContentDescription" />

        </LinearLayout>

        <TextView
            android:id="@+id/detected_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="14sp" />

        <!-- resolution selection -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resolution_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/resolution_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/resolution_option_overwrite"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:text="@string/resolution_option_overwrite"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/resolution_option_skip_incoming"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:text="@string/resolution_option_skip" />

                <RadioButton
                    android:id="@+id/resolution_option_rename_incoming"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:checked="true"
                    android:text="@string/resolution_option_rename_incoming" />

            </RadioGroup>

        </LinearLayout>

        <!-- progressing -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_view"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:indeterminate="false"
                    android:max="100" />

                <TextView
                    android:id="@+id/progress_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="middle"
                    android:gravity="bottom|end"
                    android:singleLine="true" />

            </FrameLayout>

            <TextView
                android:id="@+id/progress_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/progress_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_close"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close" />

            <Button
                android:id="@+id/button_abort"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/abort" />

            <Button
                android:id="@+id/button_start"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
